--- a/source/_config.yml
+++ b/source/_config.yml
@@ -22,9 +22,11 @@ tagsCovers: # 文章标签自动匹配封面图
   UI库: /images/post/ui.jpg
   美化: /images/post/beautify.jpg
   vite: /images/post/vite.jpg
+  markerdown: /images/post/markerdown.jpg
+  AI: /images/post/AI.jpg
 favicon:
-  href: /images/head/head.png # 网站图标
-  type: image/png # 图标类型，可能的值有(image/png, image/vnd.microsoft.icon, image/x-icon, image/gif)
+  href: /images/head/head.jpg # 网站图标
+  type: image/jpg # 图标类型，可能的值有(image/png, image/vnd.microsoft.icon, image/x-icon, image/gif)
 
 function: # 功能开关，可选值（true,false）
   globalToc: true # 开启该功能会自动开启文章 TOC（文章目录） 功能
@@ -32,7 +34,7 @@ function: # 功能开关，可选值（true,false）
   copyCode: true # 是否允许复制代码块
 
 imageCDN: # 图片 CDN 功能
-  enable: false # 开启该功能
+  enable: false # 开启该功能  
   origin: /../../images/ # 图片原始目录
   to: https://cdn.jsdelivr.net/gh/nexmoe/nexmoe.github.io@latest/images/ # 图片 CDN 域名
 
@@ -55,19 +57,28 @@ menu:
   关于糖糖:
     - /about.html
     - icon-jiubei1
-  我的朋友:
+  大伙伴们:
     - /friend.html
     - icon-cola
-#  下载中心:
-#    - /download.html
-#    - icon-tangguo
+  小朋友圈:
+    - /memos.html
+    - icon-tangguo
 
+# 配置memos组件相关内容，需要使用已有的momos服务才行，可到https://usememos.com/本地部署一套备忘录服务    
+memos:
+  host: https://memos.tangyuxian.com
+  pageSize: 10
+  filter: "#moments" # 用于筛选memos的标签,默认是#moments。匹配到后会自动移除
+  enableFancybox: true
+  
 widgets:
+  - name: switch_theme
+    enable: true
   - name: search
     enable: true
     options:
       search:
-        type: engine # 可选engine（用搜索引擎搜索）、swiftype、或local（本地搜索）
+        type: local # 可选engine（用搜索引擎搜索）、swiftype、或local（本地搜索）
         url: https://cn.bing.com/search?q=site:tangyuxian.com # 搜索引擎地址，在type为swiftype时无效 e.g:https://www.google.com/search?q={你的博客链接}
         id: <swiftype-id> # swiftype的id，见启用教程。在type为engine时无效
   - name: social
@@ -129,16 +140,24 @@ widgets:
     enable: true
     options:
       widgetLink: #链接组件
-        - title: 糖糖第一可爱
+        - title: 糖糖的闺中小秘密
           img: https://cdn.tangyuxian.com/PicGoImages/202304272004917.jpg
-          link : https://tangyuxian.com/
+          link : https://memos.tangyuxian.com/
 # 扩展挂件
-pendant:
+pendants:
+  - name: clock
+    enable: true
+  - name: qweather
+    enable: true    
+copyTip: "著作权归作者所有。\n商业转载请联系作者获得授权，非商业转载请注明出处。\n来源：%url" # 自定义复制版权文案,使用 %url 代替当前页面URL, 修改为false禁用
+
+# 聊天机器人 可以内嵌ai聊天页面到这里，chat中配置内嵌的地址，比如dify或者是其它定制化的聊天界面，style是修改嵌入的iframe的样式
+chatbot:
   enable: true
   options:
-    - clock #时钟
-    - qweather #天气
-copyTip: "著作权归作者所有。\n商业转载请联系作者获得授权，非商业转载请注明出处。\n来源：%url" # 自定义复制版权文案,使用 %url 代替当前页面URL, 修改为false禁用
+    title: 糖糖的AI分身(BETA)
+    chat: https://www.tangyuxian.com/weifu.html #https://udify.app/chatbot/Qzk1b4iaIF5eAlTi
+    style: "width: 100%; height: 100%;overflow: hidden;" #"width: 100%; height: 122%;transform: translateY(-10%);"
 
 slotHead: |
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -150,6 +169,7 @@ slotHead: |
 
     gtag('config', 'G-1Z7TFL96ZH');
   </script>
+  <script src="https://unpkg.com/hexo-shiki-plugin@1.0.27/lib/codeblock.js"></script>
 slotFooter: |
 
 
